# jsm5600-reverse-eng

./: .gitignore  imports.txt
docs/: HT_failure_analysis.md  SEM_Porting_Feasibility_Report.md  agent.md  shim_design.md  shim_usage.md
docs/ins/: PROTOCOL_DEF.md  SCSI_LOG_FORMAT.md  TRANSFER_PROMPT.md  all_functions.txt  ins_list.txt  ins_todo.md  pins_protocol.md
docs/srs/: srs.md  user_srs.md
packaging/arch/wine-jsm5600/: 0001-compobj16-lazy-init.patch  0002-winnls16-sendimemessage.patch  0003-ole2disp16-errorinfo-stubs.patch  0004-winaspi16-legacy-commands.patch  0005-krnl386-allow-winaspi-native-owner.patch  PKGBUILD
src/: agent.md
src/sem/: CMakeLists.txt  main.cpp
src/shim/: pyproject.toml  sem_video_shim.py
src/wine/: Makefile  Sem.ini  bridge_sem.py  deep_decode.py  editfile  fake_wnaspi32.c  fp3d32.def  gen_stub.py  passthrough_wnaspi32.c  protocol_definitions.json  redecode_log.py  run_jsm5600_with_logs.sh  run_patched.sh  stub_fp3d32.c  test_decoder.py  test_sem.c  test_unwrap.py  virtual_sem.py  wnaspi32.def  wnaspi32.h
src/wine/log/: README.md  index.html  log_viewer.py
